--- a/style.css
+++ b/style.css
@@ -8,3 +8,14 @@
   font-variation-settings:
     "wdth" 100;
 }
+* { 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+body {
+  background-color: #c8e6c9;
+  color: #333;
+  line-height: 1.6;
+}
