--- a/style.css
+++ b/style.css
@@ -16,6 +16,37 @@
 }
 body {
   background-color: #c8e6c9;
-  color: #333;
-  line-height: 1.6;
+}
+
+.logo {
+  width: 300px;
+  display: block;
+  height: auto;
+  margin: 0 auto; 
+}
+
+main {
+  width: 375px;
+  background: #f4f4f4;
+  border-radius: 20px;
+  margin: 0 auto;
+  padding: 44px 24px 23px;
+}
+label {
+  color: #777777;
+  font-weight: 400;
+  font-size: 14px;
+} 
+select {
+  width: 100%;
+  height: 48px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  border: 1px solid #bbbbbb;
+  margin-bottom: 24px;
+  appearance: none;
+  padding-left: 18px;
+  font-weight: 700;
+  font-size: 16px;
+  color: #555555;
 }
