--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 .roboto-custom {
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
@@ -8,12 +6,14 @@
   font-variation-settings:
     "wdth" 100;
 }
-* { 
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+
 body {
   background-color: #c8e6c9;
 }
@@ -22,22 +22,25 @@ body {
   width: 300px;
   display: block;
   height: auto;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
 main {
   width: 375px;
   background: #f4f4f4;
   border-radius: 20px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
   padding: 44px 24px 23px;
 }
+
 label {
   color: #777777;
   font-weight: 400;
   font-size: 14px;
-} 
-select {
+}
+
+select,
+input {
   width: 100%;
   height: 48px;
   border-radius: 4px;
@@ -49,9 +52,64 @@ select {
   font-weight: 700;
   font-size: 16px;
   color: #555555;
+  cursor: pointer;
 }
+
 .brasil {
   width: 44px;
   height: auto;
-  
+
+}
+
+button {
+  width: 100%;
+  height: 48px;
+  background-color: #4caf50;
+  border-radius: 4px;
+  border: none;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+button:active {
+  opacity: 0.6;
+}
+
+section {
+  border: 1px solid #bbbbbb;
+  border-radius: 20px;
+  margin-top: 36px;
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.arrow-img {
+  margin: 15px 0;
+}
+
+.currency-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.currency {
+  color: #777777;
+  font-size: 14px;
+}
+
+.currency-value {
+  color: #555555;
+  font-weight: 700;
+  font-size: 20px;
+
 }
